<resources>
    <!--Titres-->
    <string name="app_name">JeuPromob</string>
    <string name="title_petit_bac">Petit bac</string>
    <string name="title_question_game">Répondez vite</string>
    <string name="title_beer_game">Servez bien la bière</string>
    <string name="title_shape_game">Dessinez la forme</string>
    <string name="title_training">Entraînement</string>
    <string name="title_multi">Multijoueur</string>
    <string name="title_end">Bien joué !</string>
    <string name="title_esquive_game">Esquivez les objets</string>

    <!--UI-->

    <string name="button_play_solo">Jouer en solo</string>
    <string name="button_play_multi">Jouer en multijoueur</string>
    <string name="button_pass_game">Passer le jeu</string>
    <string name="button_return_menu">Retour</string>
    <string name="quizz_button_submit">Valider</string>
    <string name="hint_user_name">Entrer votre pseudonyme</string>
    <string name="textview_neighbor_list">Liste des joueurs a proximité</string>
    <string name="button_connect">Connexion</string>

    <!--Les réponses seront mises en majuscule, auront les espaces effacés -->

    <string name="quizz_result_true">Correct !</string>
    <string name="quizz_result_false">Incorrect !</string>
    <string-array name="questions">
        <item>Quel est la couleur du cheval blanc d\'henri 4 ?</item>
        <item>Dans une course de voiture, je suis 3ème, si je dépasse le 2ème, qu\'elle-est ma position ?</item>
        <item>Quel-est l\'actuel président de la France ?</item>
    </string-array>

    <string-array name="answers_1">
        <item>blanc</item>
    </string-array>

    <string-array name="answers_2">
        <item>2</item>
        <item>2ème</item>
        <item>2eme</item>
        <item>deuxieme</item>
        <item>deuxième</item>
    </string-array>

    <string-array name="answers_3">
        <item>macron</item>
        <item>emmanuelmacron</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
